# wx-nfp

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  config.status  configure  configure.ac  configure.scan  deb_packaging.howto  languages.cfg  wx-nfp.cbp  wx-nfp.depend  wx-nfp.layout  wx-nfpApp.rc
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
data/: Makefile.am  Makefile.in  wx-npf.desktop
data/icons/: Makefile.am  Makefile.in
data/icons/16x16/: Makefile.am  Makefile.in
data/icons/22x22/: Makefile.am  Makefile.in
data/icons/24x24/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.am  Makefile.in
data/xpm/: WxToolButton1_XPM.xpm  WxToolButton2_XPM.xpm  WxToolButton3_XPM.xpm  buttonNextCard_XPM.xpm  buttonPrevCard_XPM.xpm  button_next_card.xpm  button_prev_card.xpm  save.xpm  save_alert.xpm  splash_screen.xpm  sync.xpm  sync_alert.xpm  wx-nfp.xpm  wx_nfp.xpm
debian/: README.Debian  changelog  control  copyright  rules
doc/: Makefile.am  Makefile.in  copyright  install_ubuntu.sh  wx-nfp_changelog  wx-nfp_changelog_pl
doc/html/: Makefile.am  Makefile.in  index.html  style.css
doc/html/en/: Makefile.am  Makefile.in  index.html
doc/html/img/: Makefile.am  Makefile.in
doc/html/pl/: Makefile.am  Makefile.in  index.html  licencja-gnu.html
include/: Crypto.h  IOoperations.h  aboutFrame.h  cardEntry.h  cardFrame.h  chart.h  configClass.h  configFrame.h  customChartWindow.h  customPrintout.h  customWindowLeft.h  customWindowMain.h  customWindowNotes.h  customWindowTop.h  cyclesData.h  cyclesData_declarations.h  cyclesLengthChart.h  dayEntry.h  dayFrame.h  drawingClass.h  goToFrame.h  liveUpdateClass.h  lutealPhasesChart.h  nfpMainFrame.h  notificationFrame.h  passwordDialog.h  phasesChart.h  printFrame.h  serverOperationsForm.h  statisticsFrame.h  syncActionTypeDialog.h  temperaturesChart.h  updatesNotificationForm.h  utilClass.h  wx-nfpApp.h  wx-nfpAppInfo.h  wx-nfpAppVersion.h  wxHttpThread.h
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  pl.mo  pl.po  readme.txt  wx-nfp.pot
src/: Crypto.cpp  IOoperations.cpp  Makefile.am  Makefile.in  aboutFrame.cpp  aboutFrame.h  cardEntry.cpp  cardEntry.h  cardFrame.cpp  cardFrame.h  chart.cpp  configClass.cpp  configClass.h  configFrame.cpp  configFrame.h  customChartWindow.cpp  customPrintout.cpp  customPrintout.h  customWindowLeft.cpp  customWindowLeft.h  customWindowMain.cpp  customWindowMain.h  customWindowNotes.cpp  customWindowTop.cpp  customWindowTop.h  cycleGraph.cpp  cycleGraph.h  cyclesData.cpp  cyclesData.h  cyclesData_declarations.h  cyclesData_results.cpp  cyclesLengthChart.cpp  dayEntry.cpp  dayEntry.h  dayFrame.cpp  dayFrame.h  drawingClass.cpp  drawingClass.h  goToFrame.cpp  goToFrame.h  (+27 more)
src/a/: histogramsFrame.cpp  histogramsFrame.h
src/b/: cycleGraph.cpp  cycleGraph.h  histogramsFrame.cpp  histogramsFrame.h
win_installer/: installer_script.iss  wx-nfp_licence_en.txt  wx-nfp_licence_pl.txt
wxsmith/: cardFrame.wxs  configFrame.wxs  cycleGraph.wxs  dayFrame.wxs  goToFrame.wxs  histogramsFrame.wxs  notificationFrame.wxs  passwordDialog.wxs  serverOperationsForm.wxs  statisticsFrame.wxs  syncActionTypeDialog.wxs  updatesNotificationForm.wxs
