bin_PROGRAMS = wx-nfp
wx_nfp_SOURCES = aboutFrame.cpp	\
		aboutFrame.h	\
		cardEntry.cpp	\
		cardEntry.h	\
		cardFrame.cpp	\
		cardFrame.h	\
		configClass.cpp	\
		configClass.h	\
		configFrame.cpp	\
		configFrame.h	\
		customPrintout.cpp	\
		customPrintout.h	\
		customWindowLeft.cpp	\
		customWindowLeft.h	\
		customWindowMain.cpp	\
		customWindowMain.h	\
		customWindowNotes.cpp	\
		customWindowNotes.h	\
		customWindowTop.cpp	\
		customWindowTop.h	\
		cyclesData.cpp	\
		cyclesData_declarations.h	\
		cyclesData_results.cpp \
		cyclesData.h	\
		cycleGraph.cpp \
		cycleGraph.h \
		dayEntry.cpp	\
		dayEntry.h	\
		dayFrame.cpp	\
		dayFrame.h	\
		drawingClass.cpp	\
		drawingClass.h	\
		goToFrame.cpp	\
		goToFrame.h	\
		histogramsFrame.cpp \
		histogramsFrame.h \
		liveUpdateClass.cpp	\
		liveUpdateClass.h	\
		nfpMainFrame.cpp	\
		nfpMainFrame.h	\
		notificationFrame.cpp	\
		notificationFrame.h	\
		printFrame.cpp	\
		printFrame.h	\
		translationHelper.cpp	\
		translationHelper.h	\
		updatesNotificationForm.cpp	\
		updatesNotificationForm.h	\
		utilClass.cpp	\
		utilClass.h	\
		wx-nfpApp.cpp	\
		wx-nfpApp.h	\
		wx-nfpAppInfo.h	\
		wx-nfpAppVersion.h

wx_nfp_LDADD = @LIBS@
wx_nfp_CXXFLAGS = @CXXFLAGS@
wx_nfp_CPPFLAGS = -DDATADIR='"$(pkgdatadir)"' -DLOCALEDIR=\"$(localedir)\" -DDOCDIR='"$(docdir)"'
