bin_PROGRAMS = wx-nfp
wx_nfp_SOURCES = aboutFrame.cpp \
cardEntry.cpp \
cardFrame.cpp \
chart.cpp \
configClass.cpp \
configFrame.cpp \
customChartWindow.cpp \
customPrintout.cpp \
customWindowLeft.cpp \
customWindowMain.cpp \
customWindowNotes.cpp \
customWindowTop.cpp \
cyclesData.cpp \
cyclesData_results.cpp \
cyclesLengthChart.cpp \
dayEntry.cpp \
dayFrame.cpp \
drawingClass.cpp \
goToFrame.cpp \
liveUpdateClass.cpp \
lutealPhasesChart.cpp \
nfpMainFrame.cpp \
notificationFrame.cpp \
phasesChart.cpp \
printFrame.cpp \
statisticsFrame.cpp \
temperaturesChart.cpp \
translationHelper.cpp \
updatesNotificationForm.cpp \
utilClass.cpp \
wx-nfpApp.cpp

wx_nfp_LDADD = @LIBS@
wx_nfp_CXXFLAGS = @CXXFLAGS@
wx_nfp_CPPFLAGS = -DDATADIR='"$(pkgdatadir)"' -DLOCALEDIR=\"$(localedir)\" -DDOCDIR='"$(docdir)"' -I../include
