bin_PROGRAMS = wx-nfp
wx_nfp_SOURCES = aboutFrame.cpp \
cardEntry.cpp \
cardFrame.cpp \
chart.cpp \
configClass.cpp \
configFrame.cpp \
Crypto.cpp \
customChartWindow.cpp \
customPrintout.cpp \
customWindowLeft.cpp \
customWindowMain.cpp \
customWindowNotes.cpp \
customWindowTop.cpp \
cyclesData.cpp \
cyclesData_results.cpp \
cyclesLengthChart.cpp \
dayEntry.cpp \
dayFrame.cpp \
drawingClass.cpp \
goToFrame.cpp \
IOoperations.cpp \
lutealPhasesChart.cpp \
nfpMainFrame.cpp \
nfpMainFrame_io_operations.cpp \
notificationFrame.cpp \
passwordDialog.cpp \
phasesChart.cpp \
printFrame.cpp \
serverOperationsForm.cpp \
statisticsFrame.cpp \
syncActionTypeDialog.cpp \
temperaturesChart.cpp \
translationHelper.cpp \
updatesNotificationForm.cpp \
utilClass.cpp \
wxHttpThread.cpp \
wx-nfpApp.cpp

wx_nfp_LDADD = @LIBS@
wx_nfp_CXXFLAGS = @CXXFLAGS@
wx_nfp_CPPFLAGS = -DDATADIR='"$(pkgdatadir)"' -DLOCALEDIR=\"$(localedir)\" -DDOCDIR='"$(docdir)"' -I../include
